# C_LUSL

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  README.md  main.c
.github/workflows/: cmake.yml
include/: binary.h  bufread.h  config.h  deserializer.h  header.h  meta.h  serializer.h  sha3.h  stat_win.h
src/: argparse.c  binary.c  bufread.c  deserializer.c  header.c  meta.c  serializer.c  sha3.c
test/: CMakeLists.txt  binary_test.c  bufread_test.c  deserializer_test.c  header_test.c  md5_test.c  meta_test.c  serializer_test.c  sha_test.c  test_util.h
